[tool.poetry]
name = "debug_toolkit"
version = "4.3.0"
description = ""
authors = ["Natan Yellin <aantn@users.noreply.github.com>"]
packages = [
    { include = "debug_toolkit", from = "src" },
]

[tool.poetry.scripts]
debug-toolkit = "debug_toolkit.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.7.0"
psutil = "^5.8.0"
py-spy = "^0.3.10"
pydantic = "1.10.13"
typing-extensions = "4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
